--- a/formulario-login.html
+++ b/formulario-login.html
@@ -9,7 +9,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilo.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <title>IFLIX</title>
+    <title>Login</title>
 </head>
 
 <body>
@@ -17,15 +17,16 @@
         <h1 class="tamanho-letra">IFLIX</h1>
     </div>
 
+    <form>
     <div class="container space">
-        <form>
-            <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label text-light">Endereço de email:</label>
+            
+        <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label text-light"><strong>Endereço de email:</strong></label>
             <input type="email" class="form-control" id="exampleInputEmail1" placeholder ="Digite seu email" aria-describedby="emailHelp">
             <div id="emailHelp" class="form-text">Não vamos compartilhar seu email com ninguém</div>
             </div>
             <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label text-light">Senha:</label>
+            <label for="exampleInputPassword1" class="form-label text-light"><strong>Senha:</strong></label>
             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Digite sua senha">
             </div>
             <div class="mb-3 form-check">
@@ -34,10 +35,9 @@
             </div>
             <div class="text-center">
             <a href="index.html" class="btn back-fund-input">Entrar</a>
-            <a href="#" class="btn back-fund-input">Cadastrar</a>
+            <a href="formulario-cad.html" class="btn back-fund-input">Cadastrar</a>
             </div>
-        </form>
-    </div>
-
+        </div>
+    </form>
 </body>
 </html>
