Fazendo ultimas modificações

--- a/formulario-cad.html
+++ b/formulario-cad.html
@@ -36,8 +36,8 @@
         <input type="text" name="telefone" class="form-control" id="telefone" placeholder="Digite um contato válido">
     </div>
 
-    <div class="text-center">
-        <a href="formulario-login.html" class="btn back-fund-input">Concluído</a>
+    <div class="text-center space-2">
+        <a href="index.html" class="btn back-fund-input">Concluído</a>
     </div>  
 
 </div> 
