--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
     <nav class="navbar navbar-expand-lg navbar-light cor1" id="navbar">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="imagens/IFLIX.jpg" width="50"></a>
+          <a class="navbar-brand" href="index.html"><img src="imagens/IFLIX.jpg" width="50"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="true" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="IFLIX">
             <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#FILMES">Filmes</a>
@@ -161,11 +161,24 @@
                 <img src="imagens/bnc.jpg" class="img-fluid" alt="..."> <br>
             </div>
         </div>
+        <br>
 </body>
 
-<footer id="rodape">
-  <p>Copyright &copy; 2022 - Criado por Mayla Silva e Camille Andrade</p>
-  <p><a href="https://ananindeua.ifpa.edu.br/" target="_blank">IFPA, Campus Ananindeua</a></p>
+
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4">
+  <p class="col-md-4 mb-0 text-muted">© 2022 Criado por Mayla e Camille</p>
+
+  <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+    <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+  </a>
+
+  <ul class="nav col-md-4 justify-content-end">
+    <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
+    <li class="nav-item"><a href="formulario-login.html" class="nav-link px-2 text-muted">Login</a></li>
+    <li class="nav-item"><a href="formulario-cad.html" class="nav-link px-2 text-muted">Cadastre-se</a></li>
+    <li class="nav-item"><a href="https://ananindeua.ifpa.edu.br/" class="nav-link px-2 text-muted" target="_blank">Sobre</a></li>
+  </ul>
 </footer>
+<br>
 
 </html>
