Adicionando nova tela p/ direcionamento login

--- a/formulario-login.html
+++ b/formulario-login.html
@@ -34,7 +34,7 @@
             <label class="form-check-label text-light" for="exampleCheck1">Receber noticías pelo email</label>
             </div>
             <div class="text-center">
-            <a href="index.html" class="btn back-fund-input">Entrar</a>
+            <a href="telaInicial.html" class="btn back-fund-input">Entrar</a>
             <a href="formulario-cad.html" class="btn back-fund-input">Cadastrar</a>
             </div>
         </div>
